compiler/testData/diagnostics/nativeTests/stdClassAndTypealiasAmbiguity.kt
import kotlin.*
import kotlin.jvm.*
import kotlin.native.concurrent.*
import kotlin.native.*

@<!DEPRECATION, TYPEALIAS_EXPANSION_DEPRECATION!>SharedImmutable<!>
@<!DEPRECATION!>ThreadLocal<!>
val x = 42

@Throws(Exception::class)
fun test() {}
